sumo/tests/od2trips/errors/o/or_time_begin_larger/input_od_or.fma
$OR;D2
* From-Time  To-Time
1.00 0.00
* Factor
1.00
*
* some
* additional
* comments
         1          2          100

